before change the entire logic of tokens in cookies by a token in Authorization Header
due to the browser's security is tricky work and handle cookies directly, my biggest problem is that clients like swagger ui can't send
the cookies he wants like a token's cookie
