# Infrastructure/src/main/java/org/cris6h16/Adapters/In/Rest/DTOs/LoginResponseDTO.java
@@ -1,0 +1,4 @@
+package org.cris6h16.Adapters.In.Rest.DTOs;
+
+public record LoginResponseDTO(String accessToken, String refreshToken) {
+}
